--- a/src/components/AsideMenu/AsideMenu.module.scss
+++ b/src/components/AsideMenu/AsideMenu.module.scss
@@ -2,6 +2,12 @@
   padding: 15px;
   width: 200px;
   background-color: #ddd;
+  position: relative;
+
+  &__nav-wrapper{
+    position: sticky;
+    top: 80px;
+  }
 
   &__title{
     margin-top: 20px;
@@ -14,6 +20,7 @@
     text-align: center;
     background-color: lightsalmon;
     cursor: pointer;
+    list-style: none;
   }
 
   &:hover{
