--- a/src/components/Courses/subcomponents/Course.module.scss
+++ b/src/components/Courses/subcomponents/Course.module.scss
@@ -5,6 +5,7 @@ display: flex;
 flex-direction: column;
 background-color: #ddd;
 border-radius: 5px;
+list-style: none;
 
 &__title{
   text-align: center;
