--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,6 +5,7 @@
   padding: 15px;
   transform: translate(-50%, -50%);
   z-index: 100;
+  // min-width:300px;
 
   &::backdrop{
     backdrop-filter: blur(2px);
