--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Saira Condensed';
+  text-decoration: none;
+  list-style: none;
 }
 
 .content-wrapper{
