--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,16 +4,28 @@
   left: 0;
   right: 0;
   display: flex;
-  height: 60px;
+  height: 70px;
   background-color: #ddd;
   border-bottom: 2px solid #000;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
   z-index: 10;
 
+ h1{
+    font-size: 45px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+
+  button{
+    padding: 0 15px;
+    font-size: 20px;
+  }
+
   &__logo-wrapper{
-    width:60px;
-    height: 60px;
-    background-color: #438756;
+    width:70px;
+    height: 70px;
+    background-color: #31a552;
   }
 
   &__title{
