--- a/src/components/UserCourses/UserCourses.module.scss
+++ b/src/components/UserCourses/UserCourses.module.scss
@@ -2,10 +2,12 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  
 
   &__title{
     text-align: center;
     margin-bottom: 20px;
+    background-color: #eee;
   }
 
   &__list{
